fixed z-index issue and detail page buton style

--- a/src/app/layout/styles/_sidebar.scss
+++ b/src/app/layout/styles/_sidebar.scss
@@ -2,12 +2,10 @@
     height: 100%;
     width: 60px;
     float: left;
-    background-color: $neutral-grey;
+    background-color: white;
     color: white;
     position: relative;
-    @media (max-width: 768px) {
-        z-index: 20;
-    }
+    z-index: 20;
     .detail-actions {
         list-style: none;
         padding: 0;
@@ -21,7 +19,6 @@
                 width: 100%;
                 height: 100%;
                 border: none;
-                border-bottom: 1px solid $neutral-grey;
                 box-shadow: none;
                 background: white;
                 color: $dark-grey;
